@@ -36,7 +36,6 @@ Crafted Bow,443
 Crafted Club,477
 Crafted Spear,474
 Creepy Armor,593
-Creepy Skin,592
 Cross,468
 Crossbow Bolt,368
 Crossbow,365
