@@ -1,9 +1,10 @@
 ﻿SOFTEditor Changelog:
 ######
 Version 1.0:
-- Added 61 ItemIDs
-- Added buttons to set all items to 100 (too high of a number will crash the game on opening inventory)
+- Added 60 ItemIDs
+- Added buttons to set all items to 100 (higher number will crash the game on opening inventory)
 - Added button to remove all items
+- Added Tool to set ALL armor slots to a specific armor type and armorpoints of 9999
 
 Version 0.3:
 - Changed layout and added Readme.txt
